--- a/Objetivo 3.ipynb
+++ b/Objetivo 3.ipynb
@@ -90,7 +90,7 @@
     "#graficos\n",
     "fig, [[ax33, ax34], [ax43,ax44]]  = plt.subplots(nrows=2, ncols=2, figsize=(10,6), constrained_layout=True)\n",
     "\n",
-    "fig.suptitle('Caída del Campo Geomagnético',fontsize=15, weight='bold')\n",
+    "fig.suptitle('Caída del Campo Magnético',fontsize=15, weight='bold')\n",
     "\n",
     "#velocidad linal\n",
     "\n",
@@ -101,7 +101,7 @@
     "ax33.grid()\n",
     "ax33.legend(loc=1)\n",
     "ax33.set_title('Lineal')\n",
-    "ax33.set_ylabel(\"B (nT)\")\n",
+    "ax33.set_ylabel(\"CM (nT)\")\n",
     "ax33.set_xlabel(\"Tiempo (años)\")\n",
     "\n",
     "#velocidad radio\n",
@@ -113,7 +113,7 @@
     "ax34.grid()\n",
     "ax34.legend(loc=1)\n",
     "ax34.set_title('Dependencia unidimensional')\n",
-    "ax34.set_ylabel(\"B (nT)\")\n",
+    "ax34.set_ylabel(\"CM (nT)\")\n",
     "ax34.set_xlabel(\"Tiempo (años)\")\n",
     "\n",
     "#velocidad area\n",
@@ -125,7 +125,7 @@
     "ax43.grid()\n",
     "ax43.legend(loc=1)\n",
     "ax43.set_title('Dependencia bidimensional')\n",
-    "ax43.set_ylabel(\"B (nT)\")\n",
+    "ax43.set_ylabel(\"CM (nT)\")\n",
     "ax43.set_xlabel(\"Tiempo (años)\")\n",
     "\n",
     "#velocidad volumen\n",
@@ -137,7 +137,7 @@
     "ax44.grid()\n",
     "ax44.legend(loc=1)\n",
     "ax44.set_title('Dependencia tridimensional')\n",
-    "ax44.set_ylabel(\"B (nT)\")\n",
+    "ax44.set_ylabel(\"CM (nT)\")\n",
     "ax44.set_xlabel(\"Tiempo (años)\");\n",
     "\n",
     "plt.savefig(\"campo.jpg\")\n"
